<resources>
    <string name="app_name">Calcular Gorjeta</string>
    <string name="value">Informe o valor:</string>
    <string name="person">Qdn pessoas:</string>
    <string name="Gorjeta">Gorjesta:</string>
    <string name="porcentagem">0%</string>
    <string name="total">Total:</string>
    <string name="total_person">Total/Pessoa:</string>
    <string name="Gorjeta_text">R$: 0.00</string>
    <string name="total_text">R$: 0.00</string>
    <string name="total_pessoa_text">R$: 0.00</string>
</resources>
